namespace MotorDriver.Driver.enums;

public enum MotorKind
{
    MotorA,
    MotorB,
}